# evore-program

./: .gitignore  Cargo.toml  DEPLOY.md  README.md  rust-toolchain.toml
crank/: .env.example  Cargo.toml  README.md
crank/src/: config.rs  crank.rs  db.rs  lut.rs  main.rs  miner_cache.rs  sender.rs
crank/src/pipeline/: board_state_monitor.rs  channels.rs  checkpoint_batcher.rs  confirmation.rs  deployer_batcher.rs  deployment_check.rs  expected_fee_updater.rs  failure_handler.rs  fee_check.rs  lut_check.rs  lut_creation.rs  mod.rs  shared_state.rs  tx_processor.rs  tx_sender.rs  types.rs
js-crank/: .env.example  README.md  package-lock.json  package.json
js-crank/src/: index.js
program/: Cargo.toml
program/src/: consts.rs  entropy_api.rs  error.rs  instruction.rs  lib.rs  ore_api.rs  state.rs  validation.rs
program/src/processor/: mod.rs  process_checkpoint.rs  process_claim_ore.rs  process_claim_sol.rs  process_create_deployer.rs  process_create_manager.rs  process_create_strat_deployer.rs  process_deposit_autodeploy_balance.rs  process_mm_autocheckpoint.rs  process_mm_autodeploy.rs  process_mm_create_miner.rs  process_mm_deploy.rs  process_mm_full_autodeploy.rs  process_mm_strat_autocheckpoint.rs  process_mm_strat_autodeploy.rs  process_mm_strat_full_autodeploy.rs  process_recycle_sol.rs  process_recycle_strat_sol.rs  process_transfer_manager.rs  process_update_deployer.rs  process_update_strat_deployer.rs  process_withdraw_autodeploy_balance.rs  process_withdraw_tokens.rs  strategy_dispatch.rs
program/tests/: strat_autocheckpoint.rs  strat_autodeploy_dsp.rs  strat_autodeploy_dynev.rs  strat_autodeploy_ev.rs  strat_autodeploy_manual.rs  strat_autodeploy_percentage.rs  strat_autodeploy_split.rs  strat_create_deployer.rs  strat_full_autodeploy.rs  strat_recycle_sol.rs  strat_security.rs  strat_update_deployer.rs  strat_validation.rs  test.rs
program/tests/strat_common/: mod.rs
scripts/: extend-program.mjs  package-lock.json  package.json
sdk/: .gitignore  LICENSE  README.md  package-lock.json  package.json
sdk/src/: accounts.d.ts  accounts.js  constants.d.ts  constants.js  index.d.ts  index.js  instructions.d.ts  instructions.js  pda.d.ts  pda.js  transactions.d.ts  transactions.js
